<resources>
    <string name="app_name">Greenerizer</string>
    <string name="title_home">Beranda</string>
    <string name="title_maps">Maps</string>
    <string name="title_articles">Artikel</string>
    <string name="title_account">Akun</string>
    <!--    Register and Login-->
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">DAFTAR</string>
    <string name="sign_in">MASUK</string>
    <string name="invalid_email">Bukan email valid</string>
    <string name="invalid_password">Password setidaknya harus 8 karakter</string>
    <string name="signin_failed">"Masuk gagal"</string>
    <string name="signin_success">"Masuk sukses"</string>
    <string name="required">Wajib*</string>
    <string name="fill_form">Isi form ini</string>
    <string name="already_have_account">Sudah memiliki akun? <b><u>Masuk</u></b></string>
    <string name="not_have_account">Belum punya akun? <b><u>Daftar</u></b></string>
    <string name="success_signup">Daftar sukses</string>
    <string name="failed_signup">Daftar gagal</string>

    <!--    HomePage -->
    <string name="hello">Halo, </string>
    <string name="extension"> !</string>
    <string name="my_wallet">Dompet Saya</string>
    <string name="default_value">0</string>
    <string name="point"> Poin</string>
    <string name="history">Riwayat</string>
    <string name="exchange_point">Tukar poin</string>
    <string name="location">Lokasi mu</string>
    <string name="scan_rubish">Pindai sampah</string>
    <string name="use_camera">Kamera</string>
    <string name="use_gallery">Galeri</string>
    <string name="choose_picture">Pilih gambar</string>

    <!--    Profile -->
    <string name="title_profile">Akun Saya</string>
    <string name="log_out">Keluar</string>

    <!--    Maps -->
    <string name="rubbish_bank">Bank Sampah</string>

    <!--    Result-->
    <string name="organic">Organik</string>
    <string name="anorganic">Anorganik</string>
    <string name="result_label">Nama Sampah</string>
    <string name="price">Price</string>
    <string name="unit">Poin/Kg</string>
    <string name="weight">Berat (Kg)</string>
    <string name="total_price">Total Harga</string>
    <string name="enter_deposit">Setorkan</string>
    <string name="description">Description</string>
    <string name="initial_number">0</string>

    <!--    Camera-->
    <string name="success_take_photo">Berhasil mengambil foto</string>
    <string name="failed_take_photo">Gagal mengambil foto</string>
    <string name="failed_open_camera">Gagal membuka kamera</string>
    <string name="clear_background">Pastikan latar belakang tidak ada benda lain</string>
    <string name="warning_message">Pastikan barang dalam kondisi tidak pecah</string>

    <!--   Articles -->
    <string name="information_trash">Informasi Sampah</string>
    <!--   Detail -->
    <string name="how_to_handle">Cara Pengelolaan Sampah</string>
    <!--   Confirmation Transaction-->
    <string name="thank_you">Terima Kasih!</string>
    <string name="help_earth_statement">Sudah membantu bumi ini\nmenjadi lebih baik!</string>
    <string name="processed">Pesananan Anda sedang diproses</string>
    <string name="unit_weight">Kg</string>
    <string name="confirmation">OK</string>
    <string name="wait_statement">Harap menunggu untuk pengambilannya\noleh tim kami</string>

    <!--   Rewards  -->
    <string name="information_rewards">Benefit</string>
    <string name="judul">Judul</string>
    <string name="points">Poin</string>
    <string name="your_point">Poin Kamu:</string>

    <!--    Detail  Rewards -->
    <string name="name_rewards">Rewards</string>
    <string name="descriptions">Descriptions</string>
    <string name="exchange">Tukar</string>

    <!-- Redeem Rewards -->
    <string name="congratulations">Selamat!</string>
    <string name="congratulations_statement">Anda telah berhasil menukarkan hadiah!</string>
    <string name="reward_processed">Hadiah Anda sedang diproses</string>
    <string name="wait">Harap menunggu</string>
</resources>