<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transaction.TransactionFragment">

    <TextView
        android:id="@+id/thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/help_earth_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_earth_statement"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/thank_you"
        app:layout_constraintEnd_toEndOf="@id/thank_you"
        app:layout_constraintTop_toBottomOf="@id/thank_you"/>
    
    <ImageView
        android:id="@+id/iv_thankyou"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_thank_you"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_earth_statement"/>
    
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processed"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_thankyou"/>

    <TextView
        android:id="@+id/value_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/wait_statement"
        app:layout_constraintTop_toBottomOf="@id/tv_status"/>

    <TextView
        android:id="@+id/unit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_weight"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/value_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_status"/>

    <TextView
        android:id="@+id/tv_rubbish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/unit_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_status"/>

    <TextView
        android:id="@+id/wait_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_statement"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rubbish" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_status"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:background="@drawable/bg_confirm_button"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wait_statement" />


</androidx.constraintlayout.widget.ConstraintLayout>