<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rewards.detail.DetailRewardsFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/name_rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_rewards"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="17sp"
        android:textColor="@color/green_500"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_rewards"
        app:layout_constraintBottom_toBottomOf="@id/name_rewards" />

    <TextView
        android:id="@+id/value_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_number"
        android:textSize="17sp"
        android:textColor="@color/green_500"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/name_points"
        app:layout_constraintTop_toTopOf="@id/name_points"
        app:layout_constraintBottom_toBottomOf="@id/name_points" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="20dp"
        android:maxLines="6"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_rewards"/>

    <Button
        android:id="@+id/btn_debit"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_button_20"
        android:text="@string/exchange"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>