<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.result.ResultFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/trash_type"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_anorganic"
        android:text="@string/anorganic"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageView" />

    <TextView
        android:id="@+id/result_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/trash_type"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unit_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="17sp"
        android:textColor="@color/green_500"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/result_scan"
        app:layout_constraintBottom_toBottomOf="@id/result_scan" />

    <TextView
        android:id="@+id/price_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/default_value"
        android:textSize="17sp"
        android:textColor="@color/green_500"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/unit_trash"
        app:layout_constraintBottom_toBottomOf="@id/unit_trash"
        app:layout_constraintEnd_toStartOf="@id/unit_trash" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="16dp"
        android:maxLines="6"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_scan"/>
    
    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="31dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_weight"
        app:layout_constraintStart_toStartOf="@id/tv_weight">

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            />
        <TextView
            android:id="@+id/value_trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_number"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="16sp"
        android:layout_marginStart="28dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/tv_weight"
        app:layout_constraintBottom_toBottomOf="@id/tv_weight"
        app:layout_constraintStart_toEndOf="@id/tv_weight"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_number"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_total_price"
        app:layout_constraintTop_toBottomOf="@id/tv_total_price" />
    
    <com.dicoding.greenerizer.views.DebitButton
        android:id="@+id/btn_debit"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counter"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />






</androidx.constraintlayout.widget.ConstraintLayout>